# study-shizexing

./: ProjectHome.md  Tutorials.md
assembly/: assembly.c
bluez/: CMakeLists.txt  build.py  readme  rfcomm-client.c  rfcomm-server.c  simplescan.c
boost/: CMakeLists.txt  build.py  makefile  readme  smart_ptr.cpp  test.cpp
c++/: ReferenceClass.h  boost_compare.cpp  ctime.cpp  final_method.cpp  md5.cpp
cjson/: main.cpp  makefile
cli/win/: tailme.bat
gps/: RmcParser.cpp
gradle/: build.gradle  readme
gradle/gradle-1.12/: methods.gradle
java/: TestString.java
jni/: createJVM  createJVM.cpp  invoke  makefile  run.sh
linux/asynchronized-io/: poll.cpp
linux/input-subsystem/: log  readMouse2.cpp
network/: byteorder.cpp  client.c
objective-c/: TestString.m
python/: main.py
python/RealEstateFilter/: 95120.basic.txt  crawler.py  crawlerfactory.py  lotlandforsale.htm  main.py  override.py  readme  realestate.py  realestatefilter.py  redfincrawler.py  redfinparser.py  school.py  zillowcrawler.py  zillowparser.py
qt/qmake-example/: Makefile.Debug  Makefile.Release  example.pro  readme
qt/webview/: webview.piz
trunk/assembly/: test.c  test.s
trunk/bluez/: CMakeLists.txt  build.py  rfcomm-client.c  rfcomm-server.c
trunk/boost/: CMakeLists.txt  build.py  program_options.cpp  testRandom.cpp  thread.cpp
trunk/c++/: CMakeLists.txt  InitializeList.cpp  ReferenceClass.cpp  ReferenceDeclarationTest.cpp  md5.cpp  md5.rfc1321.c  readme  smart_ptr.cpp  sstream.cpp  (+3 more)
usb/: AOATest.cpp  UsbUtils.cpp  client.cpp  lsusb.cpp  makefile
wiki/: Tutorials.wiki
(+105 files in other folders)
